service details banner added a black fade and banner image video alignment issue fixed

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,14 @@ html {
   background-color: #020816;
   overflow-x: hidden;
 }
+.videoplayer video {
+  object-fit: cover !important;
+}
+@media only screen and (max-width: 767px) {
+  .videoplayer video {
+    object-fit: contain !important;
+  }
+}
 
 @layer utilities {
   .wrapper {
